# middleware

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: porter_app_agentr-backend_4680.yml
examples/: github.py  google_serp.py  quote.py  reddit.py  search.py  weather.py
src/agent/: graph.py
src/agentr/: __init__.py  app.py  application.py  cli.py  integration.py  server.py  store.py
src/agentr/agent/: graph.py
src/agentr/applications/: gcal.py  github.py  gmail.py  openweather.py  resend.py  tavily.py  zenquote.py
src/tools/: github.py  quote.py  reddit.py  search.py  weather.py
