[project]
name = "agentr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manoj Bajaj", email = "manojbajaj95@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=0.3.9",
    "langchain-mcp-adapters>=0.0.3",
    "langgraph>=0.3.8",
    "langsmith>=0.3.13",
    "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
